...
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView3" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:drawableLeft="@drawable/ic_phone_black"
        android:gravity="center_horizontal"
        android:hint="Numar de telefon"
...
        app:met_singleLineEllipsis="true"
        app:layout_constraintTop_toBottomOf="@id/imageView4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edtPassword"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:drawableLeft="@drawable/ic_lock_black"
        android:gravity="center_horizontal"
        android:hint="Parola"
        android:inputType="textPassword"
...
        app:cbd_strokeColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />
  
    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:width="300dp"
        android:background="@drawable/btn_rounded"
        android:backgroundTintMode="src_in"
...
